--- a/src/Components/TitleCards/TitleCards.css
+++ b/src/Components/TitleCards/TitleCards.css
@@ -6,15 +6,15 @@ margin-bottom: 30px;
 .title-cards h2{
 margin-bottom: 8px;
 }
-
 .card-list{
-display: flex;
-gap: 10px;
-overflow-x: scroll;
+  display: flex;
+  gap: 10px;
+  overflow-x: auto; /* keep default scroll behavior */
+  scroll-behavior: smooth; /* smooth scrolling */
 }
 
 .card-list::-webkit-scrollbar{
-    display: none;
+    display: none; 
 }
 
 .card-list img{
