--- a/src/Components/TitleCards/TitleCards.css
+++ b/src/Components/TitleCards/TitleCards.css
@@ -22,3 +22,13 @@ width: 240px;
 border-radius: 4px;
 cursor: pointer;
 }
+
+.card-list .card {
+  position: relative;
+}
+
+.card-list .card p {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
