--- a/src/Components/Pages/Login/Login.css
+++ b/src/Components/Pages/Login/Login.css
@@ -79,3 +79,15 @@ a {
    color: #b3b3b3;
    text-decoration: none;
 }
+
+.form-switch {
+  margin-top: 40px;
+  color: #737373;
+}
+
+.form-switch span {
+  margin-left: 6px;
+  color: #fff;
+  font-weight: 500;
+  cursor: pointer;
+}
