--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -116,6 +116,13 @@
   display: block;
 }
 
+.nav-dark {
+  background: #141414;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.6);
+  height: 65px; /* slightly smaller when scrolled */
+}
+
 /* Responsive */
 @media (max-width: 1024px) {
   .navBar-left ul li {
@@ -132,3 +139,4 @@
     display: none;
   }
 }
+
