--- a/src/Components/TitleCards/TitleCards.css
+++ b/src/Components/TitleCards/TitleCards.css
@@ -2,6 +2,7 @@
   margin-top: 50px;
   margin-bottom: 30px;
   padding: 0 3%;
+  padding-left: 0px;
 }
 
 .title-cards h2 {
@@ -117,6 +118,7 @@
 
 @media (max-width: 500px) {
   .title-cards {
+
     margin-top: 25px;
     margin-bottom: 13px;
     padding: 0px 3%;
